# content-factory

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REFACTORING_COMPLETE.md  SECURITY.md  SOP.md  SOURCE_OF_TRUTH.md  TODO.md  docker-compose.temporal.yml  pyproject.toml  test_api.py  test_cli.py  test_compliance_migration.py  test_e2e.py  test_multi_editor.py  test_smoke.py  topics-pool.md  verify_architecture.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
.omc/sessions/: b7a23dc9-39c8-48f9-af03-e89264e63f70.json
.omc/state/: hud-stdin-cache.json
.omo/run-continuation/: ses_0c80dc2a7ffeaYRfM9V2NIrhU4.json
02-内容单元库/方案单元/: SOL-20260625-001_电力板块4类投资者配置方案.md  SOL-20260625-002_电力板块3类避雷标的.md  SOL-20260625-003_AI算力3大卡点优先级.md  SOL-20260625-004_AI算力资源端投资风险信号.md  SOL-20260625-005_人形机器人3大卡点优先级.md  SOL-20260625-006_中国vs东盟分工策略.md  SOL-20260625-007_AI算力3大瓶颈配置.md  SOL-20260625-008_AI算力下半场3大赛道配置.md
02-内容单元库/案例单元/: CAS-20260625-001_长江电力2025年报案例.md  CAS-20260625-002_华能国际2025年报案例.md  CAS-20260625-003_中国核电中国广核2025年报案例.md  CAS-20260625-004_三峡能源龙源电力2025年报案例.md  CAS-20260625-005_2026三重重拐点信号.md  CAS-20260625-006_电力L8卡点案例.md  CAS-20260625-007_稀土L7卡点案例.md  CAS-20260625-008_铜铝L7卡点案例.md  CAS-20260625-009_减速器L4卡点.md  CAS-20260625-010_精密件L5卡点.md  CAS-20260625-011_传感器L7卡点.md  CAS-20260625-012_马来西亚数据中心.md  CAS-20260625-013_新加坡高端数据中心.md  CAS-20260625-014_越南泰国封测.md  CAS-20260625-015_电力L8基础瓶颈.md  CAS-20260625-016_氦气L6L7隐藏瓶颈.md  CAS-20260625-017_HBM_L5_新石油.md  CAS-20260625-018_国产AI_GPU三强争霸.md  CAS-20260625-019_功率半导体涨价传导.md  CAS-20260625-020_MLCC下一个存储.md
02-内容单元库/概念单元/: CON-20260625-001_电力板块真正定位.md  CON-20260625-002_4大电力赛道比喻定义.md  CON-20260625-003_Serenity8层级AI算力.md  CON-20260625-004_大摩方法论卡点识别.md  CON-20260625-005_人形机器人8层级.md  CON-20260625-006_AI产业链东盟承接度.md  CON-20260625-007_AI算力3层级瓶颈.md  CON-20260625-008_AI算力下半场3大赛道.md
02-内容单元库/观点单元/: OPI-20260625-001_水电印钞机火电打工仔核电闷声发财风光靠天吃饭.md  OPI-20260625-002_AI算力真正卡点是资源端.md  OPI-20260625-003_人形机器人真正卡点减速器精密件传感器.md  OPI-20260625-004_AI供应链全球化重构.md  OPI-20260625-005_AI算力三大瓶颈电力氦气HBM.md  OPI-20260625-006_AI算力下半场3个被低估新卡点.md
02-内容单元库/问题单元/: QST-20260625-001_2026年电力板块4大赛道的真实盈利逻辑是什么.md  QST-20260625-002_AI真正的瓶颈不是GPU那是什么.md  QST-20260625-003_人形机器人真正的卡点不在本体.md  QST-20260625-004_AI供应链全球化分工真实图景.md  QST-20260625-005_AI算力三大瓶颈真相.md  QST-20260625-006_AI算力下半场被低估新卡点.md
03-处理状态/: 关系总览.md  原始素材索引.csv  去重与冲突总览.md  去重候选索引.csv  处理状态总览.md  已处理清单.csv  待处理清单.csv  抽取日志.md  来源注册表.csv  来源注册表_批量生成候选.csv
05-主题地图/: 2026三重重拐点信号.md  AI算力3大瓶颈对比.md  AI算力下半场3大赛道.md  AI算力真正卡点对比_资源端.md  东盟AI供应链全球化分工.md  人形机器人3大卡点对比.md  电力板块4大赛道盈利模式对比.md  电力板块投资操作框架.md
06-选题装配/: HBM国产替代专题_长鑫长江国家战略突破.md  MLCC量价齐升专题_AI时代下一个存储.md  东盟数据中心专题_柔佛州集中度暴增.md  减速器L4深度专题_日企垄断下的中国突破.md  核电板块深度专题_中国核电vs中国广核双寡头对比.md  水电板块深度专题_3大水电巨头对比.md  稀土永磁电机专题_AI算力机器人新能源车隐性卡点.md
archives/2026-06/: cicc-ai-population-20260620.md  cicc-ai-population-v2-20260620.md  morgan-ai-supply-chain-20260620.md
cninfo-toolkit/: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
cninfo-toolkit/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cninfo-toolkit/.github/workflows/: ci.yml
cninfo-toolkit/docs/: api.md  index.md  installation.md  quickstart.md
cninfo-toolkit/examples/: __init__.py  multi_company.py  quickstart.py
cninfo-toolkit/output/extracted/: 600487.SH_20260623_亨通光电2025年年度权益分派实施公告.json  600487.SH_20260623_安徽承义律师事务所关于江苏亨通光电股份有限公司差异化分红事项的法律意见书.json  600487.SH_20260625_亨通光电公司章程（2026年6月修订）.json  600487.SH_20260625_亨通光电关于2024年限制性股票激励计划第一个解除限售期解除限售条件成就的公告.json  600487.SH_20260625_亨通光电关于变更公司财务总监的公告.json  600487.SH_20260625_亨通光电关于召开2026年第三次临时股东会的通知.json  600487.SH_20260625_亨通光电关于拟变更公司注册资本、修订《公司章程》并办理工商变更的公告.json  600487.SH_20260625_亨通光电关于新增公司2026年度与日常经营生产业务相关的商品期货套期保值业务的公告.json  600487.SH_20260625_亨通光电关于调整2024年限制性股票激励计划回购价格并回购注销部分限制性股票的公告.json  600487.SH_20260625_亨通光电第九届董事会第十七次会议决议公告.json  600487.SH_20260625_安徽承义律师事务所关于江苏亨通光电股份有限公司2024年限制性股票激励计划第一个解除限售期解除限售条.json  600487.SH_20260625_申万宏源证券承销保荐有限责任公司关于江苏亨通光电股份有限公司2024年限制性股票激励计划第一个解除限.json  600487.SH_20260630_亨通光电关于控股股东部分股权解除质押及质押公告.json  600487.SH_20260703_亨通光电关于2024年限制性股票激励计划第一个解除限售期解除限售暨上市流通的提示性公告.json  600487.SH_20260704_亨通光电关于控股股东部分股权解除质押公告.json
cninfo-toolkit/src/cninfo_toolkit/: __init__.py  _cli.py  anns.py  pdf_dl.py  pdf_extract.py  py.typed
cninfo-toolkit/tests/: conftest.py  test_anns.py  test_cli.py  test_pdf_dl.py  test_pdf_extract.py  test_utils.py
docs/: ai-interests-mapping.md  cn-pub-style-guide.md  data-source-hierarchy.md  trendradar-feeds-debug.md  user-guide.md
docs/adr/: 001-component-based-architecture.md
docs/luban-reports/: content-factory-review-2026-07-05.md
drafts/candidates/: feed-2026-06-20.json  feed-2026-06-20.scored.json  feed-2026-06-21.json  feed-2026-06-21.scored.json  feed-2026-06-23.json  feed-2026-06-23.scored.json  feed-2026-06-24.json  (+5 more)
examples/: README.md  ab_test_run.py  compliance_strict_demo.py  data_source_fallback.py  multi_tenant_demo.py  quickstart_e2e.py
logs/: bibi-calls.jsonl  failed-channels.jsonl
reports/: bibi-status-2026-06-24.md
scripts/: backfill-feed.py  bibi-safe.py  bibi-status-report.py  cn-pub-beautify.py  cninfo-anns.py  cninfo-pdf-dl.py  cninfo-pdf-extract.py  compliance-check.py  daily-feed.sh  data-validator.py  filter-candidates.py  image-gen.py  industry-kol-scan.py  link-units-to-research-reports.py  non-a-stock-participants.md  obsidian-query.sh  paused-channels.txt  pool-manager.py  prompt-pack.md  publish.sh  quarterly-review.sh  research-reports-query.sh  rss-channels.json  rss-feed.py  serenity-research.sh  single-stock-completeness-check.py  sync-to-research-reports.py  topic-scorer.py  tracking-record.py  verify-predictions.py
templates/: moc-routing.md  post-template-interview.md  post-template-single-stock.md  post-template-v2.md  query-templates.md  section-hooks-template.md  tldr-template.md
tests/: conftest.py
(+267 files in other folders)
