[project]
name = "content-factory-workspace"
version = "0.3.0"
description = "投研内容 AI 编辑部操作系统 - monorepo workspace"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "chenliitaz", email = "chenliitaz@gmail.com" },
]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/sdk",
    "packages/server",
    "packages/cli",
    "packages/domains/*",
    "packages/adapters/*",
    "packages/editors/*",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

# ── Ruff ──
[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "TCH",
]
ignore = [
  "E501",  # line too long
  "B008",  # function call in default arg(typer)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"src/content_factory/compliance/checker.py" = ["E501", "B904"]  # legacy file
"src/content_factory/images/generator.py" = ["E501"]  # legacy file
"src/content_factory/research/*.py" = ["E501", "B904"]  # legacy files
"src/content_factory/pipeline/scorer.py" = ["E501"]  # legacy file

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy ──
[tool.mypy]
python_version = "3.10"
strict = false  # Legacy scripts aren't strict-typed yet
warn_unused_configs = true
ignore_missing_imports = true
files = ["src/content_factory"]

[[tool.mypy.overrides]]
module = "content_factory.cninfo.*"
strict = true
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ── pytest ──
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=content_factory",
  "--cov-report=term-missing",
  "--cov-report=html",
]
filterwarnings = [
  "ignore::DeprecationWarning:pdfplumber.*",
  "ignore::DeprecationWarning:matplotlib.*",
]

# ── Coverage ──
[tool.coverage.run]
source = ["src/content_factory"]
omit = [
  "*/tests/*",
  "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "def __repr__",
  "\\.\\.\\.",
]