[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cninfo-toolkit"
version = "0.1.0"
description = "A free, open-source Python toolkit for fetching A-share company announcements from cninfo.com.cn (巨潮资讯网)."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "chenliitaz", email = "chenliitaz@gmail.com" },
]
maintainers = [
  { name = "chenliitaz", email = "chenliitaz@gmail.com" },
]
keywords = [
  "cninfo",
  "巨潮",
  "announcements",
  "A股",
  "A股公告",
  "pdf",
  "pdfplumber",
  "financial-data",
  "china-stock",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
  "pdfplumber>=0.10.0",
  "requests>=2.31.0",  # 替代 curl,跨平台,更 Pythonic
  "typer>=0.12.0",
  "rich>=13.7.0",  # CLI 美化
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.11.0",
  "ruff>=0.1.0",
  "mypy>=1.7.0",
  "pre-commit>=3.5.0",
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.5.0",
  "types-requests",
]
test = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-mock>=3.11.0",
]

[project.urls]
Homepage = "https://github.com/chenliitaz/cninfo-toolkit"
Repository = "https://github.com/chenliitaz/cninfo-toolkit"
Documentation = "https://chenliitaz.github.io/cninfo-toolkit"
"Bug Tracker" = "https://github.com/chenliitaz/cninfo-toolkit/issues"
Changelog = "https://github.com/chenliitaz/cninfo-toolkit/blob/main/CHANGELOG.md"

# ── CLI 入口点 ──
[project.scripts]
cninfo = "cninfo_toolkit._cli:app"

# ── setuptools 配置 ──
[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["cninfo_toolkit*"]

[tool.setuptools.package-data]
cninfo_toolkit = ["py.typed"]

# ── Ruff 配置(替代 black+flake8+isort)──
[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "SIM",  # flake8-simplify
  "TCH",  # flake8-type-checking
]
ignore = [
  "E501",  # line too long(交给 formatter)
  "B008",  # function call in default argument(typer 必需)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # asserts allowed in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy 配置 ──
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false
files = ["src/cninfo_toolkit"]

# ── pytest 配置 ──
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-ra",         # show summary of all test results
  "--strict-markers",
  "--strict-config",
  "--cov=cninfo_toolkit",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-fail-under=70",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:pdfplumber.*",
]

# ── MkDocs ──
[tool.mkdocs]
# 通过 mkdocs.yml 配置,这里只是声明